Add repo link in package.json

--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Mihaiii/semantic-autocomplete.git"
+  },
   "files": [
     "dist/*",
     "README.md",
