Update example and prepare for deploy

--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "semantic-autocomplete",
   "description": "A blazing-fast semantic search React component. Match by meaning, not just by letters. Search as you type without waiting (no debounce needed). Rank by cosine similarity.",
   "version": "0.0.9",
+  "homepage": "https://mihaiii.github.io/semantic-autocomplete/",
   "type": "module",
   "main": "dist/semantic-autocomplete.umd.js",
   "module": "dist/semantic-autocomplete.es.js",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
@@ -35,9 +38,23 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "gh-pages": "^6.1.1",
     "vite": "^5.1.4"
   },
-  "keywords": ["semantic", "search", "nlp", "cosine", "similarity", "react", "component", "autocomplete", "mui", "material", "ui", "materialui"],
+  "keywords": [
+    "semantic",
+    "search",
+    "nlp",
+    "cosine",
+    "similarity",
+    "react",
+    "component",
+    "autocomplete",
+    "mui",
+    "material",
+    "ui",
+    "materialui"
+  ],
   "author": "Mihai Chirculescu",
   "license": "MIT"
 }
