--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "module": "dist/semantic-autocomplete.es.js",
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d ghpages",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
